Added dummy job id

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ NVM_API_KEY=your_nevermined_api_key
 NVM_ENVIRONMENT=testing
 AGENT_DID=your_agent_did
 SUNO_API_KEY=your_suno_api_key
+OPENAI_API_KEY=your_openai_api_key
+
+# DUMMY Suno job id for testing
+IS_DUUMY=false
+DUMMY_JOB_ID=your_dummy_job_id
