--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "song-generator-agent",
+  "name": "song-generation-agent-a2a",
   "version": "1.0.0",
-  "main": "dist/main.js",
-  "license": "MIT",
-  "author": "Charly López",
+  "description": "A2A agent for generating songs with lyrics and melody",
+  "main": "dist/server.js",
   "scripts": {
-    "prestart": "ts-node src/utils/checkEnv.ts",
-    "start": "ts-node src/main.ts",
     "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/main.ts",
-    "test": "jest --config jest.config.ts"
+    "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "generate-song": "ts-node scripts/generate-song.ts",
+    "debug:generate-song": "node --inspect-brk -r ts-node/register scripts/generate-song.ts"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.19",
-    "@langchain/openai": "^0.3.14",
-    "@nevermined-io/payments": "^0.8.0",
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "music-metadata": "7.13.3"
+    "@langchain/core": "^0.3.49",
+    "@langchain/openai": "^0.5.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.3",
+    "music-metadata": "^11.2.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.10",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.24",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "ts-jest": "^29.2.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.3.3"
   }
 }
