--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,30 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./",
     "strict": true,
-    "isolatedModules": true,
-    "useDefineForClassFields": true,
-
-    "noUnusedLocals": true, // Not enabled by default in `strict` mode.
-    "noUnusedParameters": true, // Not enabled by default in `strict` mode.
-    "allowJs": false,
-    "checkJs": false,
-
-    "strictPropertyInitialization": false,
-    "strictNullChecks": true,
-    "useUnknownInCatchVariables": false,
-    "resolveJsonModule": true,
-
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "lib": ["ES2022", "ES2021", "ES2021.String", "DOM"],
-    "declaration": true,
-    "declarationMap": true,
+    "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
-    "moduleResolution": "node",
-    "module": "CommonJS",
-
-    "target": "ES2022",
-    "noImplicitAny": false,
-    "removeComments": true,
-    "experimentalDecorators": true,
-    "preserveConstEnums": true,
-    "outDir": "./dist",
-    //"rootDir": "./src/",
-    // "baseUrl": "./",
-    "typeRoots": ["node_modules/@types"],
+    "inlineSourceMap": false,
+    "inlineSources": true,
+    "declaration": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
     "paths": {
-      "@/": ["./src/"],
-    },
-    
+      "*": ["node_modules/*"]
+    }
   },
   "include": [
-    "src/**/*",    
+    "src/**/*",
+    "scripts/**/*"
   ],
-  "exclude": ["node_modules", "test/**/*"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
