--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "music-metadata": "^11.2.1",
+    "undici": "^6.9.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ws": "^8.18.1"
   }
 }
