--- a/package.json
+++ b/package.json
@@ -17,26 +17,32 @@
     "@langchain/core": "^0.3.49",
     "@langchain/openai": "^0.5.7",
     "@types/cors": "^2.8.17",
+    "@types/eventsource": "^1.1.15",
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "eventsource": "^2.0.2",
     "express": "^4.18.3",
-    "music-metadata": "^11.2.1",
-    "undici": "^6.9.0",
-    "uuid": "^9.0.1"
+    "langchain": "^0.1.25",
+    "music-metadata": "^7.14.0",
+    "openai": "^4.28.4",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "ws": "^8.16.0",
+    "@types/ws": "^8.5.10"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
-    "@types/supertest": "^6.0.2",
-    "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4",
+    "nodemon": "^3.1.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "ws": "^8.18.1"
+    "typescript": "^5.3.3"
   }
 }
