--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "debug:generate-song": "node --inspect-brk -r ts-node/register scripts/generate-song.ts"
   },
   "dependencies": {
+    "@fal-ai/client": "^1.4.0",
     "@langchain/core": "^0.3.49",
     "@langchain/openai": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/eventsource": "^1.1.15",
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -30,8 +32,7 @@
     "openai": "^4.28.4",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
-    "ws": "^8.16.0",
-    "@types/ws": "^8.5.10"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
