Fixed taskType, added demo mode, fixed agentCard

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 FAL_KEY=your_fal_api_key
 PIAPI_KEY=your_piapi_key
+DEMO_MODE=false # Switch to true if you don't want to create real videos, but use a placeholder
